inspector/indexeddb/requestDatabaseNames.html is flaky on Mac. https://bugs.webkit.org/show_bug.cgi?id=157141

Reviewed by Alex Christensen.

Source/WebCore:

Test: inspector/indexeddb/deleteDatabaseNamesWithSpace.html

* platform/FileSystem.cpp:
(WebCore::decodeFromFilename): Advance iterator after decoding.

LayoutTests:

* inspector/indexeddb/deleteDatabaseNamesWithSpace-expected.txt: Added.
* inspector/indexeddb/deleteDatabaseNamesWithSpace.html: Added.

Canonical link: https://commits.webkit.org/175258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200212 268f45cc-cd09-0410-ab3c-d52691b4dbfc